[package]
name = "nari_act_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nari_act_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
chrono = "0.4"
md-5 = "0.10.5"
sha2 = "0.10.6"
